# multi-band-deesser

./: .gitignore  CMakeLists.txt  README.md
Source/: DeEsserDSP.cpp  DeEsserDSP.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
